--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.0",
     "discord.js": "^14.13.0",
     "fs": "^0.0.1-security",
+    "iso-639-1": "^3.1.3",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7"
   }
