--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.18.0",
     "@vitalets/google-translate-api": "^9.2.0",
-    "discord.js": "^14.13.0",
+    "discord.js": "^14.16.3",
+    "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
     "iso-639-1": "^3.1.3",
     "node-cron": "^3.0.3",
